# vocascan-frontend

./: .eslintrc.json  .gitignore  .prettierrc  .stylelintrc.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.ci  README.md  SECURITY.md  Vocascan_de_DE.ts  colors.scss  jsconfig.json  localazy.json  package-lock.json  package.json  pull_request_template.md  qml.qrc  tailwind.config.js  vocascan.config.js  webpack.rules.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  downloadTranslations.yml  pullrequest.yml  release.yml  test.yml  translations.yml  uploadTranslations.yml
backend/src/: CMakeLists.txt  FrontendHandler.cpp  FrontendHandler.hpp  NewVocabHandler.cpp  database.cpp  database.hpp  frontendHandler.cpp  languagePackageHandler.cpp  languagePackageHandler.hpp  main.cpp  newVocabHandler.cpp  newVocabHandler.hpp
backend/src/boilerplate/: foreignWord.hpp  languagePackage.hpp  translatedWord.hpp
backend/src/qml/: AddLanguagePackage.qml  main.qml  page2.qml
docker/: docker-compose.yml  generate-config.js
frontend/: .babelrc  .gitignore  CMakeLists.txt  package-lock.json  package.json  vocascanModule.js  webpack.rules.js
frontend/src/: app.jsx  index.css  index.html  index.js  index.scss  main.js  renderer.jsx
frontend/src/Components/: sections.css
frontend/src/Components/AddLanguagePackage/: AddLanguagePackage.css  AddLanguagePackage.jsx
frontend/src/Components/AddVocab/: AddVocab.css  AddVocab.jsx  AddVocab.scss
frontend/src/Components/Nav/: Nav.css  Nav.jsx  Nav.scss  NavButton.css  NavButton.jsx  NavButton.scss
frontend/src/Components/Others/Dropdown/: Dropdown.css  Dropdown.jsx  Dropdown.scss  Examples.js
frontend/src/Components/Others/InputField/: InputField.css  InputField.jsx
frontend/src/Components/Popups/: StartPopup.css  StartPopup.jsx  StartPopup.scss
public/: config.js  electron.js  index.html  manifest.json
public/default-themes/: dark.css  light.css
public/themes/: dark.css  light.css
resources/: electron.js
resources/splash/: splash-screen.css  splash-screen.html  splash-screen.js
resources/utils/: constants.js  ipc.js  menu.js  util.js
src/: App.jsx  App.test.js  CMakeLists.txt  Dockerfile  FrontendHandler.cpp  FrontendHandler.hpp  LanguagePackageHandler.cpp  app.jsx  colors.js  colors.scss  config.js  constants.scss  database.cpp  database.hpp  index.html  index.js  index.scss  lib.scss  main.cpp  main.js  renderer.jsx
src/Components/: sections.scss
src/Components/AddLanguagePackage/: AddLanguagePackage.jsx  AddLanguagePackage.scss  Languages.js
src/Components/AddVocab/: AddVocab.jsx  AddVocab.scss
src/Components/ArrayTextInput/: ArrayTextInput.jsx  ArrayTextInput.scss
src/Components/Button/: Button.jsx  (+1 more)
src/context/: GuideContext.jsx  SnackbarContext.jsx
src/hooks/: useCountryFlag.js  useCreateCountryFlags.js  useDebounce.js  useDebounceCallback.js  useFeature.js  useFunctionPolling.js  useHumanizer.js  useLanguage.js  useLinkCreator.js  useScrollBlock.js  useSnack.js  useSnack.jsx  useTheme.js  userCountryFlag.js
src/i18n/: I18nProvider.js
src/modules/: about.js  clipboard.js  fileOperations.js  touchbar.js  update.js
src/qml/: AddLanguagePackage.qml  AddVocab.qml  Settings.qml  StartupPage.qml  addVocab.qml  main.qml
src/screens/: AddLanguagePackage.jsx  AddLanguagePackage.scss  AddVocab.jsx  FirstStartup.jsx  FirstStartup.scss  Login.jsx  Login.scss  Register.jsx  Register.scss  SelectionScreen.jsx  SelectionScreen.scss
src/themes/: dark.scss  index.scss  light.scss
src/utils/: Description.js  Languages.js  api.js  constants.js  index.js  theme.js
(+232 files in other folders)
